# libevlet

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  environment.yml  mini_shell.sh
cmake/: vendoring.cmake
doc/: CMakeLists.txt  Doxyfile.in
doc/pages/: mainpage.md
example/: CMakeLists.txt  ev_example.cpp  fiber_simple.cpp
source/: CMakeLists.txt  evt.cpp
source/evtlet/evt/: evt.hpp  evt_cc.hpp  evt_fiber.hpp  evt_state.hpp
source/evtlet/skein/: skein.hpp
source/evtlet/util/: dbg.hpp  mask.hpp  optional_source.hpp  scope_source.hpp
tests/: CMakeLists.txt  test_evt_cc.cpp  test_evt_fiber_cond.cpp  test_skein_cond.cpp  test_util_mask.cpp  unit_test_evt_fiber.cpp
